--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@astrojs/solid-js": "^3.0.1",
-    "astro": "^3.1.0",
-    "solid-js": "^1.7.11"
+    "astro": "^3.1.4",
+    "clsx": "^2.0.0",
+    "solid-js": "^1.7.12"
   },
   "devDependencies": {
-    "@unocss/reset": "^0.55.7",
+    "@unocss/reset": "^0.56.2",
+    "gh-pages": "^6.0.0",
     "less": "^4.2.0",
-    "unocss": "^0.55.7"
+    "unocss": "^0.56.2"
   }
 }
