--- a/.github/workflows/deploy-aliyun.yml
+++ b/.github/workflows/deploy-aliyun.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '16.x'
+        node-version: '18.14.1'
     - name: Install npm dependencies
       run: npm install
     - name: Run build task
