--- a/package.json
+++ b/package.json
@@ -1,24 +1,14 @@
 {
-  "name": "official-website",
+  "name": "docs",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro",
-    "deploy": "npm run build && gh-pages -d dist -t true"
+    "dev:docs": "turbo dev --filter=./packages/docs",
+    "dev:api": "turbo dev --filter=./packages/api",
+    "build:docs": "turbo build --filter=./packages/docs",
+    "build:api": "turbo build --filter=./packages/api"
   },
   "dependencies": {
-    "@astrojs/solid-js": "^3.0.2",
-    "astro": "^3.2.3",
-    "clsx": "^2.0.0",
-    "solid-js": "^1.7.12"
-  },
-  "devDependencies": {
-    "@unocss/reset": "^0.56.5",
-    "gh-pages": "^6.0.0",
-    "less": "^4.2.0",
-    "unocss": "^0.56.5"
+    "turbo": "^1.11.2"
   }
 }
