feat: update homepage

--- a/packages/docs/tsconfig.json
+++ b/packages/docs/tsconfig.json
@@ -1,15 +1,20 @@
 {
   "extends": "astro/tsconfigs/strict",
-
   "compilerOptions": {
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "jsxImportSource": "react",
 
     "baseUrl": ".",
+
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ]
     }
   },
-
-  "exclude": ["node_modules", "dist", "public"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "public"
+  ]
 }
