--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.3",
+    "@astrojs/react": "^3.0.7",
     "@astrojs/starlight": "^0.15.0",
+    "@types/react-dom": "^18.2.18",
+    "@univerjs/icons": "^0.1.18",
     "astro": "^4.0.6",
+    "modern-normalize": "^2.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.45",
-    "@unocss/reset": "^0.58.0",
-    "unocss": "^0.58.0"
+    "@types/react": "^18.2.45"
   }
 }
