--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "dev:docs": "turbo dev --filter=./packages/docs",
     "dev:api": "turbo dev --filter=./packages/api",
+    "dev": "turbo dev --filter=./packages/docs --filter=./packages/api",
     "build:docs": "turbo build --filter=./packages/docs",
     "build:api": "turbo build --filter=./packages/api",
-    "build": "turbo build --filter=./packages/docs --filter=./packages/api && mkdir dist && mv packages/docs/dist dist && mv packages/api/dist dist"
+    "build": "turbo build --filter=./packages/docs --filter=./packages/api && mkdir dist && cp -r packages/docs/dist/* dist && cp -r packages/api/dist/* dist"
   },
   "dependencies": {
     "turbo": "^1.11.2"
