--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "docs",
-  "version": "0.1.0",
   "type": "module",
-  "licenses": [{
-    "type": "CC-BY-NC-SA-4.0",
-    "url": "https://creativecommons.org/licenses/by-nc-sa/4.0/deed.en"
-  }, {
-    "type": "Apache-2.0",
-    "url": "https://www.apache.org/licenses/LICENSE-2.0"
-  }],
+  "licenses": [
+    {
+      "type": "CC-BY-NC-SA-4.0",
+      "url": "https://creativecommons.org/licenses/by-nc-sa/4.0/deed.en"
+    },
+    {
+      "type": "Apache-2.0",
+      "url": "https://www.apache.org/licenses/LICENSE-2.0"
+    }
+  ],
+  "version": "0.1.0",
   "scripts": {
     "dev:docs": "turbo dev --filter=./packages/docs",
     "dev:api": "turbo dev --filter=./packages/api",
@@ -18,6 +21,7 @@
     "build": "turbo build --filter=./packages/docs --filter=./packages/api"
   },
   "dependencies": {
+    "less": "^4.2.0",
     "turbo": "^1.11.2"
   }
 }
