--- a/.github/workflows/deploy-CN-EN.yml
+++ b/.github/workflows/deploy-CN-EN.yml
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   build-docker-image:
-    name: DockerImageBuild
+    name: BuildDockerImage
     runs-on: [self-hosted, macOS]
     steps:
       - uses: actions/checkout@v3
