--- a/.github/workflows/deploy-CN-EN.yml
+++ b/.github/workflows/deploy-CN-EN.yml
@@ -1,10 +1,9 @@
 name: ✈️ Deploy CN & EN
 
 on:
-  # pull_request:
-  #   branches:
-  #     - main
-  workflow_dispatch:
+  push:
+    tags:
+      - v*
     
 permissions:
   contents: write
