--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "[markdown]": {
-    "editor.formatOnSave": true,
-    "editor.formatOnPaste": true
+    "editor.formatOnSave": false,
+    "editor.formatOnPaste": false 
   },
   "cSpell.words": [
     "astro",
