--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "scripts": {
     "postinstall": "cd ./node_modules/univer && pnpm install --ignore-scripts",
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build && node ./generate-api.mjs && cp -r ./api/* ./dist/api",
     "preview": "astro preview",
     "astro": "astro"
@@ -23,9 +22,10 @@
   "dependencies": {
     "@astrojs/check": "^0.3.4",
     "@astrojs/react": "^3.0.9",
-    "@astrojs/starlight": "^0.15.1",
+    "@astrojs/starlight": "^0.15.2",
     "@types/react-dom": "^18.2.18",
-    "astro": "^4.0.8",
+    "astro": "^4.1.1",
+    "dayjs": "^1.11.10",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@types/react": "^18.2.46",
     "less": "^4.2.0",
-    "typedoc": "^0.25.4",
+    "typedoc": "^0.25.6",
     "univer": "github:dream-num/univer"
   }
 }
