--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "@astrojs/react": "^3.0.9",
-    "@astrojs/starlight": "^0.15.2",
+    "@astrojs/starlight": "^0.15.3",
+    "@rc-component/color-picker": "^1.5.1",
     "@types/react-dom": "^18.2.18",
-    "@univerjs/icons": "^0.1.24",
+    "@univerjs/icons": "^0.1.25",
     "astro": "^4.1.1",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "modern-normalize": "^2.0.0",
+    "rc-slider": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.3.3"
