--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "docs",
+  "name": "@univerjs/docs",
   "type": "module",
   "version": "0.1.0-beta.1",
+  "author": "DreamNum Inc. <developer@univer.ai>",
   "licenses": [
     {
       "type": "CC-BY-NC-SA-4.0",
@@ -15,9 +16,7 @@
   "scripts": {
     "postinstall": "cd ./node_modules/univer && pnpm install --ignore-scripts",
     "dev": "astro dev",
-    "build": "astro build && node ./generate-api.mjs && cp -r ./api/* ./dist/api",
-    "preview": "astro preview",
-    "astro": "astro"
+    "build": "astro build && node ./generate-api.mjs && cp -r ./api/* ./dist/api"
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
@@ -25,7 +24,7 @@
     "@astrojs/starlight": "^0.15.3",
     "@rc-component/color-picker": "^1.5.1",
     "@types/react-dom": "^18.2.18",
-    "@univerjs/icons": "^0.1.25",
+    "@univerjs/icons": "*",
     "astro": "^4.1.2",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
@@ -38,7 +37,11 @@
   "devDependencies": {
     "@types/react": "^18.2.47",
     "less": "^4.2.0",
+    "release-it": "^17.0.1",
     "typedoc": "^0.25.7",
     "univer": "github:dream-num/univer"
+  },
+  "npm": {
+    "publish": false
   }
 }
