chore: update ci

--- a/.github/workflows/deploy-CN-EN.yml
+++ b/.github/workflows/deploy-CN-EN.yml
@@ -1,10 +1,9 @@
 name: ✈️ Deploy CN & EN
 
 on:
-  push:
-    tags:
-      - v*
-    
+  release:
+    types: [released]
+
 permissions:
   contents: write
   pull-requests: write
