docs: update README.md

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "[markdown]": {
-    "editor.formatOnSave": false,
-    "editor.formatOnPaste": false 
+    "editor.formatOnSave": true,
+    "editor.formatOnPaste": true 
   },
   "cSpell.words": [
     "astro",
