--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@astrojs/starlight": "^0.15.3",
     "@rc-component/color-picker": "^1.5.1",
     "@types/react-dom": "^18.2.18",
-    "@univerjs/icons": "*",
+    "@univerjs/icons": "^0.1.25",
     "astro": "^4.1.2",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
