--- a/.github/workflows/deploy-aliyun.yml
+++ b/.github/workflows/deploy-aliyun.yml
@@ -17,6 +17,12 @@ jobs:
           node-version: 18
           cache: pnpm
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+            version: 8
+            run_install: false
+
       - name: Install npm dependencies
         run: pnpm install
 
