--- a/.github/workflows/deploy-aliyun.yml
+++ b/.github/workflows/deploy-aliyun.yml
@@ -1,8 +1,9 @@
 name: deploy to aliyun
 
 on:
-  release:
-    types: [released]
+  push:
+    branches:
+      - main
 
 jobs:
   build:
@@ -11,17 +12,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: pnpm
-
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
             version: 8
             run_install: false
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: pnpm
 
       - name: Install npm dependencies
         run: pnpm install
