--- a/.github/workflows/deploy-ai.yml
+++ b/.github/workflows/deploy-ai.yml
@@ -1,19 +1,34 @@
-name: ✈️ Deploy CN & EN
+name: deploy to univer.ai
 
 on:
-  release:
-    types: [released]
-
-permissions:
-  contents: write
-  pull-requests: write
+  push:
+    branches:
+      - main
 
 jobs:
-  build-docker-image:
-    name: BuildDockerImage
-    runs-on: [self-hosted, macOS]
+  build:
+    runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+            version: 8
+            run_install: false
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: pnpm
+
+      - name: Install npm dependencies
+        run: pnpm install
+
+      - name: Run build task
+        run: pnpm build
 
       - name: Login to Aliyun Container Registry (ACR)
         uses: aliyun/acr-login@v1
@@ -34,11 +49,6 @@ jobs:
           IMAGE_TAG=$(echo "${{ github.sha }}" | cut -c 1-7)
           make push_image PUSH_TAG=$IMAGE_TAG
 
-  deploy-cn-en:
-    name: DeployCNAndEN
-    runs-on: ubuntu-latest
-    needs: build-docker-image
-    steps:
       - name: Set IMAGE_TAG environment variable
         run: echo "IMAGE_TAG=$(echo ${{ github.sha }} | cut -c 1-7)" >> $GITHUB_ENV
       
