--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "@astrojs/react": "^3.0.9",
+    "@astrojs/rss": "^4.0.2",
+    "@astrojs/sitemap": "^3.0.4",
     "@astrojs/starlight": "^0.15.3",
     "@rc-component/color-picker": "^1.5.1",
     "@types/react-dom": "^18.2.18",
