--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,22 +29,7 @@ jobs:
           pnpm install
           pnpm build
 
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: dist
-          path: dist/
-
-  deploy-ai:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: dist
-
+      # Deploy to univer.ai
       - name: Login to Aliyun Container Registry (ACR)
         uses: aliyun/acr-login@v1
         with:
@@ -74,16 +59,7 @@ jobs:
           event-type: dispatch
           client-payload: '{"service":"docs","tag":"${{ env.IMAGE_TAG }}"}'
 
-  deploy-work:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: dist
-
+      # Deploy to univer.work
       - name: Deploy to univer.work
         uses: easingthemes/ssh-deploy@main
         with:
