--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,6 @@
 {
   "recommendations": [
-    "astro-build.astro-vscode",
-    "davidanson.vscode-markdownlint"
+    "astro-build.astro-vscode"
   ],
   "unwantedRecommendations": []
 }
