--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "postinstall": "cd ./node_modules/univer && pnpm install --ignore-scripts",
     "dev": "astro dev",
     "build": "astro build && node ./generate-api.mjs && cp -r ./api/* ./dist/api",
-    "release": "release-it"
+    "release": "release-it",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
@@ -28,7 +30,7 @@
     "@rc-component/color-picker": "^1.5.1",
     "@types/react-dom": "^18.2.18",
     "@univerjs/icons": "^0.1.26",
-    "astro": "^4.2.3",
+    "astro": "^4.2.4",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "modern-normalize": "^2.0.0",
@@ -38,9 +40,23 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.6.3",
     "@types/react": "^18.2.48",
+    "astro-eslint-parser": "^0.16.2",
+    "eslint": "^8.56.0",
+    "eslint-plugin-astro": "^0.31.3",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "less": "^4.2.0",
+    "simple-git-hooks": "^2.9.0",
     "typedoc": "^0.25.7",
     "univer": "github:dream-num/univer"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
