--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,22 +16,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8.12.1
-          run_install: false
-
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: pnpm
+      - name: Setup Node.js
+        uses: ./.github/actions/setup-node
 
       - name: Build
-        run: |
-          pnpm install
-          pnpm build
+        run: pnpm build
 
       # Deploy to univer.ai
       - name: Login to Aliyun Container Registry (ACR)
