--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dev": "astro dev",
     "build": "astro build && node ./generate-api.mjs && cp -r ./api/* ./dist/api",
     "release": "release-it",
+    "prepare": "simple-git-hooks",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -49,6 +50,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "less": "^4.2.0",
+    "lint-staged": "^15.2.0",
     "simple-git-hooks": "^2.9.0",
     "typedoc": "^0.25.7",
     "univer": "github:dream-num/univer"
