ci: hide vercel id in public repo

--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -40,6 +40,6 @@ jobs:
               id: vercel-demo-dev
               with:
                   vercel-token: ${{ secrets.VERCEL_TOKEN }}
-                  vercel-org-id: ${{ vars.VERCEL_ORG_ID}}
-                  vercel-project-id: ${{ vars.VERCEL_PROJECT_ID}}
+                  vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}
+                  vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID}}
                   vercel-args: --prod
