--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -109,7 +109,7 @@ jobs:
 
       #  ================= Deploy Demo =================
       - name: 📦 Build demo
-        run: pnpm build
+        run: pnpm run build:site
 
       - name: Copy demo to workspace
         run: |
