--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/starlight": "^0.16.0",
     "@rc-component/color-picker": "^1.5.1",
+    "@stackblitz/sdk": "^1.9.0",
     "@types/react-dom": "^18.2.18",
     "@univerjs/icons": "^0.1.26",
     "astro": "^4.2.4",
