--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "release": "release-it",
     "prepare": "simple-git-hooks",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "update:packages-meta": "node ./scripts/init-packages-meta.mjs"
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
@@ -38,6 +39,7 @@
     "astro": "^4.3.5",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
+    "mdast-zone": "^6.1.0",
     "modern-normalize": "^2.0.0",
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
