--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@univerjs/docs",
   "type": "module",
-  "version": "0.1.0-beta.5",
+  "version": "0.1.0",
   "packageManager": "pnpm@8.7.0",
   "author": "DreamNum Inc. <developer@univer.ai>",
   "licenses": [
@@ -14,29 +14,44 @@
       "url": "https://www.apache.org/licenses/LICENSE-2.0"
     }
   ],
+  "funding": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/univer"
+  },
+  "homepage": "https://univer.ai",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dream-num/univer-docs"
+  },
+  "bugs": {
+    "url": "https://github.com/dream-num/univer-docs/issues"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=8.5.0"
+  },
   "scripts": {
+    "prepare": "simple-git-hooks",
     "postinstall": "cd ./node_modules/univer && pnpm install --ignore-scripts",
-    "dev": "astro dev",
-    "build": "pnpm run build:site && pnpm run build:api",
+    "dev": "cross-env APP_MODE=development astro dev",
+    "build": "cross-env APP_MODE=production pnpm run build:site && pnpm run build:api",
     "build:site": "astro build",
     "build:api": "node ./generate-api.mjs && cp -r ./api/* ./dist/api",
-    "release": "release-it",
-    "prepare": "simple-git-hooks",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "update:packages-meta": "node ./scripts/init-packages-meta.mjs"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.5",
+    "@astrojs/check": "^0.5.6",
     "@astrojs/react": "^3.0.10",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
-    "@astrojs/starlight": "^0.19.1",
+    "@astrojs/starlight": "^0.20.1",
     "@rc-component/color-picker": "^1.5.2",
     "@stackblitz/sdk": "^1.9.0",
     "@types/react-dom": "^18.2.19",
-    "@univerjs/icons": "^0.1.28",
-    "astro": "^4.4.4",
+    "@univerjs/icons": "^0.1.29",
+    "astro": "^4.4.5",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "mdast-zone": "^6.1.0",
@@ -48,8 +63,12 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.4",
-    "@types/react": "^18.2.58",
+    "@types/diff": "^5.0.9",
+    "@types/react": "^18.2.59",
     "astro-eslint-parser": "^0.16.3",
+    "cross-env": "^7.0.3",
+    "diff": "^5.2.0",
+    "diff2html": "^3.4.47",
     "eslint": "^8.57.0",
     "eslint-plugin-astro": "^0.31.4",
     "eslint-plugin-react": "^7.33.2",
@@ -58,7 +77,7 @@
     "less": "^4.2.0",
     "lint-staged": "^15.2.2",
     "simple-git-hooks": "^2.9.0",
-    "typedoc": "^0.25.8",
+    "typedoc": "^0.25.9",
     "univer": "github:dream-num/univer#main"
   },
   "simple-git-hooks": {
