--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "dev": "cross-env APP_MODE=development astro dev",
     "build": "cross-env APP_MODE=production pnpm run build:site && pnpm run build:api",
     "build:site": "cross-env APP_MODE=production astro build",
-    "build:api": "node ./generate-api.mjs && cp -r ./api/* ./dist/api",
+    "build:api": "node ./scripts/generate-api.mjs && cp -r ./api/* ./dist/api",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "update:packages-meta": "node ./scripts/init-packages-meta.mjs"
