--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+  "typescript.tsdk": "node_modules/typescript/lib",
+
   // Enable the ESlint flat config support
   "eslint.experimental.useFlatConfig": true,
 
