--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   },
   "scripts": {
     "prepare": "simple-git-hooks",
-    "postinstall": "node ./scripts/install-univer.mjs",
     "dev": "cross-env APP_MODE=development astro dev",
     "build": "cross-env APP_MODE=production pnpm run build:site && pnpm run build:api",
     "build:site": "cross-env APP_MODE=production astro build",
@@ -42,33 +41,42 @@
     "update:packages-meta": "node ./scripts/init-packages-meta.mjs"
   },
   "dependencies": {
-    "@antv/g2": "^5.1.15",
-    "@astrojs/check": "^0.5.8",
+    "@antv/g2": "^5.1.16",
+    "@astrojs/check": "^0.5.9",
     "@astrojs/react": "^3.1.0",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
     "@astrojs/starlight": "^0.21.1",
+    "@codesandbox/sandpack-react": "^2.13.5",
     "@rc-component/color-picker": "^1.5.3",
     "@stackblitz/sdk": "^1.9.0",
     "@types/react-dom": "^18.2.22",
+    "@univerjs/core": "^0.1.2",
+    "@univerjs/design": "^0.1.2",
+    "@univerjs/docs": "^0.1.2",
+    "@univerjs/docs-ui": "^0.1.2",
+    "@univerjs/engine-formula": "^0.1.2",
+    "@univerjs/engine-render": "^0.1.2",
     "@univerjs/icons": "^0.1.41",
-    "astro": "^4.5.2",
+    "@univerjs/sheets": "^0.1.2",
+    "@univerjs/sheets-formula": "^0.1.2",
+    "@univerjs/sheets-ui": "^0.1.2",
+    "@univerjs/ui": "^0.1.2",
+    "astro": "^4.5.3",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "modern-normalize": "^2.0.0",
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-shadow": "^20.4.0",
     "typescript": "^5.4.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.8.1",
-    "@types/diff": "^5.0.9",
-    "@types/react": "^18.2.65",
+    "@antfu/eslint-config": "^2.8.2",
+    "@types/react": "^18.2.66",
     "astro-eslint-parser": "^0.16.3",
     "cross-env": "^7.0.3",
-    "diff": "^5.2.0",
-    "diff2html": "^3.4.47",
     "eslint": "^8.57.0",
     "eslint-plugin-astro": "^0.31.4",
     "eslint-plugin-format": "^0.1.0",
