--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-live": "^4.1.6",
     "react-shadow": "^20.4.0",
     "typescript": "^5.4.2"
   },
