--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@univerjs/docs",
+  "name": "@univerjs/web",
   "type": "module",
   "version": "0.1.0",
   "packageManager": "pnpm@8.7.0",
@@ -37,8 +37,7 @@
     "build:site": "cross-env APP_MODE=production astro build",
     "build:api": "node ./generate-api.mjs && cp -r ./api/* ./dist/api",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "update:packages-meta": "node ./scripts/init-packages-meta.mjs"
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@antv/g2": "^5.1.16",
@@ -51,18 +50,18 @@
     "@rc-component/color-picker": "^1.5.3",
     "@stackblitz/sdk": "^1.9.0",
     "@types/react-dom": "^18.2.22",
-    "@univerjs/core": "^0.1.2",
-    "@univerjs/design": "^0.1.2",
-    "@univerjs/docs": "^0.1.2",
-    "@univerjs/docs-ui": "^0.1.2",
-    "@univerjs/engine-formula": "^0.1.2",
-    "@univerjs/engine-render": "^0.1.2",
+    "@univerjs/core": "^0.1.3",
+    "@univerjs/design": "^0.1.3",
+    "@univerjs/docs": "^0.1.3",
+    "@univerjs/docs-ui": "^0.1.3",
+    "@univerjs/engine-formula": "^0.1.3",
+    "@univerjs/engine-render": "^0.1.3",
     "@univerjs/icons": "^0.1.41",
-    "@univerjs/sheets": "^0.1.2",
-    "@univerjs/sheets-formula": "^0.1.2",
-    "@univerjs/sheets-ui": "^0.1.2",
-    "@univerjs/ui": "^0.1.2",
-    "astro": "^4.5.3",
+    "@univerjs/sheets": "^0.1.3",
+    "@univerjs/sheets-formula": "^0.1.3",
+    "@univerjs/sheets-ui": "^0.1.3",
+    "@univerjs/ui": "^0.1.3",
+    "astro": "^4.5.4",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "modern-normalize": "^2.0.0",
@@ -74,7 +73,7 @@
     "typescript": "^5.4.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.8.2",
+    "@antfu/eslint-config": "^2.8.3",
     "@types/react": "^18.2.66",
     "astro-eslint-parser": "^0.16.3",
     "cross-env": "^7.0.3",
