--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@univerjs/web",
   "type": "module",
   "version": "0.1.0",
+  "private": true,
   "packageManager": "pnpm@8.7.0",
   "author": "DreamNum Inc. <developer@univer.ai>",
   "licenses": [
@@ -32,10 +33,10 @@
   },
   "scripts": {
     "prepare": "simple-git-hooks",
-    "dev": "cross-env APP_MODE=development astro dev",
-    "build": "cross-env APP_MODE=production pnpm run build:site && pnpm run build:api",
-    "build:site": "cross-env APP_MODE=production astro build",
-    "build:api": "node ./generate-api.mjs && cp -r ./api/* ./dist/api",
+    "dev": "astro dev",
+    "build": "pnpm run build:api && pnpm run build:site && cp -r ./api/* ./dist/api",
+    "build:site": "astro build",
+    "build:api": "node ./scripts/build-api.mjs",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -46,7 +47,6 @@
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
     "@astrojs/starlight": "^0.21.1",
-    "@codesandbox/sandpack-react": "^2.13.5",
     "@rc-component/color-picker": "^1.5.3",
     "@stackblitz/sdk": "^1.9.0",
     "@univerjs/core": "^0.1.3",
@@ -60,23 +60,21 @@
     "@univerjs/sheets-formula": "^0.1.3",
     "@univerjs/sheets-ui": "^0.1.3",
     "@univerjs/ui": "^0.1.3",
-    "astro": "^4.5.4",
+    "astro": "^4.5.5",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "modern-normalize": "^2.0.0",
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-live": "^4.1.6",
-    "react-shadow": "^20.4.0",
-    "typescript": "^5.4.2"
+    "react-live": "^4.1.6"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.8.3",
-    "@types/react": "^18.2.66",
+    "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
+    "@univerjs/web-api": "workspace:*",
     "astro-eslint-parser": "^0.16.3",
-    "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-plugin-astro": "^0.31.4",
     "eslint-plugin-format": "^0.1.0",
@@ -85,8 +83,8 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "less": "^4.2.0",
     "lint-staged": "^15.2.2",
-    "simple-git-hooks": "^2.10.0",
-    "typedoc": "^0.25.12"
+    "simple-git-hooks": "^2.11.0",
+    "typescript": "^5.4.2"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
