--- a/package.json
+++ b/package.json
@@ -55,15 +55,17 @@
     "@univerjs/docs-ui": "^0.1.3",
     "@univerjs/engine-formula": "^0.1.3",
     "@univerjs/engine-render": "^0.1.3",
+    "@univerjs/facade": "^0.1.3",
     "@univerjs/icons": "^0.1.41",
     "@univerjs/sheets": "^0.1.3",
     "@univerjs/sheets-formula": "^0.1.3",
     "@univerjs/sheets-ui": "^0.1.3",
     "@univerjs/ui": "^0.1.3",
-    "astro": "^4.5.5",
+    "astro": "^4.5.6",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "modern-normalize": "^2.0.0",
+    "prism-react-renderer": "^2.3.1",
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
