--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ pnpm-debug.log*
 /api/
 src/content/docs/api/*
 !src/content/docs/api/index.md
+src/content/docs/zh-cn/api/*
+!src/content/docs/zh-cn/api/index.md
