--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -15,6 +15,10 @@ runs:
       with:
         node-version: 20
         cache: pnpm
+        registry-url: ${{ secrets.VERDACCIO_URL }}
+        scope: '@univerjs-pro'
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.VERDACCIO_TOKEN }}
 
     - name: Install dependencies
       run: pnpm install
