--- a/.github/workflows/dispatch-deploy.yml
+++ b/.github/workflows/dispatch-deploy.yml
@@ -20,6 +20,9 @@ jobs:
 
       - name: Setup Node.js
         uses: ./.github/actions/setup-node
+        with:
+          registry-url: ${{ secrets.VERDACCIO_URL }}
+          node-auth-token: ${{ secrets.VERDACCIO_TOKEN }}
 
       - name: Update @univerjs/icons
         run: pnpm up @univerjs/icons -r
