--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -106,6 +106,9 @@ jobs:
 
       - name: Setup Node.js
         uses: ./.github/actions/setup-node
+        with:
+          registry-url: ${{ secrets.VERDACCIO_URL }}
+          node-auth-token: ${{ secrets.VERDACCIO_TOKEN }}
 
       #  ================= Deploy Demo =================
       - name: 📦 Build demo
