--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.12.2",
+    "@eslint-react/eslint-plugin": "^1.5.9",
     "astro-eslint-parser": "^0.17.0",
     "eslint": "8.57.0",
     "eslint-plugin-astro": "^0.34.0",
