--- a/packages/community/package.json
+++ b/packages/community/package.json
@@ -45,33 +45,34 @@
     "@rc-component/color-picker": "^1.5.3",
     "@react-spring/web": "^9.7.3",
     "@stackblitz/sdk": "^1.9.0",
-    "@univerjs/core": "^0.1.7",
-    "@univerjs/data-validation": "^0.1.7",
-    "@univerjs/design": "^0.1.7",
-    "@univerjs/docs": "^0.1.7",
-    "@univerjs/docs-ui": "^0.1.7",
-    "@univerjs/engine-formula": "^0.1.7",
-    "@univerjs/engine-numfmt": "^0.1.7",
-    "@univerjs/engine-render": "^0.1.7",
-    "@univerjs/facade": "^0.1.7",
-    "@univerjs/find-replace": "^0.1.7",
+    "@univerjs/core": "0.1.7-nightly.202404280755",
+    "@univerjs/data-validation": "0.1.7-nightly.202404280755",
+    "@univerjs/design": "0.1.7-nightly.202404280755",
+    "@univerjs/docs": "0.1.7-nightly.202404280755",
+    "@univerjs/docs-ui": "0.1.7-nightly.202404280755",
+    "@univerjs/engine-formula": "0.1.7-nightly.202404280755",
+    "@univerjs/engine-numfmt": "0.1.7-nightly.202404280755",
+    "@univerjs/engine-render": "0.1.7-nightly.202404280755",
+    "@univerjs/facade": "0.1.7-nightly.202404280755",
+    "@univerjs/find-replace": "0.1.7-nightly.202404280755",
     "@univerjs/icons": "^0.1.44",
-    "@univerjs/network": "^0.1.7",
+    "@univerjs/network": "0.1.7-nightly.202404280755",
     "@univerjs/protocol": "^0.1.18",
-    "@univerjs/rpc": "^0.1.7",
-    "@univerjs/sheets": "^0.1.7",
-    "@univerjs/sheets-conditional-formatting-ui": "^0.1.7",
-    "@univerjs/sheets-data-validation": "^0.1.7",
-    "@univerjs/sheets-find-replace": "^0.1.7",
-    "@univerjs/sheets-formula": "^0.1.7",
-    "@univerjs/sheets-numfmt": "^0.1.7",
-    "@univerjs/sheets-ui": "^0.1.7",
-    "@univerjs/sheets-zen-editor": "^0.1.7",
-    "@univerjs/slides": "^0.1.7",
-    "@univerjs/slides-ui": "^0.1.7",
-    "@univerjs/ui": "^0.1.7",
-    "@univerjs/uniscript": "^0.1.7",
-    "@wendellhu/redi": "^0.13.0",
+    "@univerjs/rpc": "0.1.7-nightly.202404280755",
+    "@univerjs/sheets": "0.1.7-nightly.202404280755",
+    "@univerjs/sheets-conditional-formatting": "0.1.7-nightly.202404280755",
+    "@univerjs/sheets-conditional-formatting-ui": "0.1.7-nightly.202404280755",
+    "@univerjs/sheets-data-validation": "0.1.7-nightly.202404280755",
+    "@univerjs/sheets-find-replace": "0.1.7-nightly.202404280755",
+    "@univerjs/sheets-formula": "0.1.7-nightly.202404280755",
+    "@univerjs/sheets-numfmt": "0.1.7-nightly.202404280755",
+    "@univerjs/sheets-ui": "0.1.7-nightly.202404280755",
+    "@univerjs/sheets-zen-editor": "0.1.7-nightly.202404280755",
+    "@univerjs/slides": "0.1.7-nightly.202404280755",
+    "@univerjs/slides-ui": "0.1.7-nightly.202404280755",
+    "@univerjs/ui": "0.1.7-nightly.202404280755",
+    "@univerjs/uniscript": "0.1.7-nightly.202404280755",
+    "@wendellhu/redi": "^0.13.3",
     "astro": "^4.6.0",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
@@ -87,11 +88,11 @@
     "rxjs": "^7.8.1"
   },
   "optionalDependencies": {
-    "@univerjs-pro/collaboration": "^0.1.7",
-    "@univerjs-pro/collaboration-client": "^0.1.7",
-    "@univerjs-pro/live-share": "^0.1.7",
-    "@univerjs-pro/sheets-data-connector": "^0.1.7",
-    "@univerjs-pro/sheets-print": "^0.1.7"
+    "@univerjs-pro/collaboration": "0.1.7-nightly.202404280755",
+    "@univerjs-pro/collaboration-client": "0.1.7-nightly.202404280755",
+    "@univerjs-pro/live-share": "0.1.7-nightly.202404280755",
+    "@univerjs-pro/sheets-data-connector": "0.1.7-nightly.202404280755",
+    "@univerjs-pro/sheets-print": "0.1.7-nightly.202404280755"
   },
   "devDependencies": {
     "@types/pako": "^2.0.3",
