--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@univerjs/thread-comment-ui": "0.1.16",
     "@univerjs/ui": "0.1.16",
     "@univerjs/uniscript": "0.1.16",
+    "@visactor/univer-vchart-plugin": "^1.0.3",
     "@wendellhu/redi": "^0.15.4",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
