--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "lint-staged": "^15.2.7",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "postcss": "^8.4.39",
+    "raw-loader": "^4.0.2",
     "sharp": "^0.33.4",
     "simple-git-hooks": "^2.11.1",
     "tailwindcss": "^3.4.4",
