--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "univer.ai",
   "type": "module",
-  "version": "0.2.0",
+  "version": "0.2.2",
   "private": false,
   "packageManager": "pnpm@9.4.0",
   "scripts": {
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@antv/g2": "^5.2.0",
-    "@codesandbox/sandpack-react": "^2.14.5",
+    "@codesandbox/sandpack-react": "^2.16.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -27,55 +27,55 @@
     "@rc-component/color-picker": "^1.6.0",
     "@react-spring/web": "^9.7.3",
     "@stackblitz/sdk": "^1.11.0",
-    "@univerjs-pro/ai-auto-complete": "0.2.0",
-    "@univerjs-pro/collaboration": "0.2.0",
-    "@univerjs-pro/collaboration-client": "0.2.0",
-    "@univerjs-pro/live-share": "0.2.0",
-    "@univerjs-pro/print": "0.2.0",
-    "@univerjs-pro/sheets-exchange-client": "0.2.0",
-    "@univerjs-pro/sheets-print": "0.2.0",
-    "@univerjs/core": "0.2.0",
-    "@univerjs/data-validation": "0.2.0",
-    "@univerjs/design": "0.2.0",
-    "@univerjs/docs": "0.2.0",
-    "@univerjs/docs-drawing": "0.2.0",
-    "@univerjs/docs-drawing-ui": "0.2.0",
-    "@univerjs/docs-ui": "0.2.0",
-    "@univerjs/drawing": "0.2.0",
-    "@univerjs/drawing-ui": "0.2.0",
-    "@univerjs/engine-formula": "0.2.0",
-    "@univerjs/engine-numfmt": "0.2.0",
-    "@univerjs/engine-render": "0.2.0",
-    "@univerjs/facade": "0.2.0",
-    "@univerjs/find-replace": "0.2.0",
+    "@univerjs-pro/ai-auto-complete": "0.2.2",
+    "@univerjs-pro/collaboration": "0.2.2",
+    "@univerjs-pro/collaboration-client": "0.2.2",
+    "@univerjs-pro/live-share": "0.2.2",
+    "@univerjs-pro/print": "0.2.2",
+    "@univerjs-pro/sheets-exchange-client": "0.2.2",
+    "@univerjs-pro/sheets-print": "0.2.2",
+    "@univerjs/core": "0.2.2",
+    "@univerjs/data-validation": "0.2.2",
+    "@univerjs/design": "0.2.2",
+    "@univerjs/docs": "0.2.2",
+    "@univerjs/docs-drawing": "0.2.2",
+    "@univerjs/docs-drawing-ui": "0.2.2",
+    "@univerjs/docs-ui": "0.2.2",
+    "@univerjs/drawing": "0.2.2",
+    "@univerjs/drawing-ui": "0.2.2",
+    "@univerjs/engine-formula": "0.2.2",
+    "@univerjs/engine-numfmt": "0.2.2",
+    "@univerjs/engine-render": "0.2.2",
+    "@univerjs/facade": "0.2.2",
+    "@univerjs/find-replace": "0.2.2",
     "@univerjs/icons": "^0.1.59",
-    "@univerjs/network": "0.2.0",
+    "@univerjs/network": "0.2.2",
     "@univerjs/protocol": "0.1.37",
-    "@univerjs/rpc": "0.2.0",
-    "@univerjs/sheets": "0.2.0",
-    "@univerjs/sheets-conditional-formatting": "0.2.0",
-    "@univerjs/sheets-conditional-formatting-ui": "0.2.0",
-    "@univerjs/sheets-data-validation": "0.2.0",
-    "@univerjs/sheets-drawing": "0.2.0",
-    "@univerjs/sheets-drawing-ui": "0.2.0",
-    "@univerjs/sheets-filter": "0.2.0",
-    "@univerjs/sheets-filter-ui": "0.2.0",
-    "@univerjs/sheets-find-replace": "0.2.0",
-    "@univerjs/sheets-formula": "0.2.0",
-    "@univerjs/sheets-hyper-link": "0.2.0",
-    "@univerjs/sheets-hyper-link-ui": "0.2.0",
-    "@univerjs/sheets-numfmt": "0.2.0",
-    "@univerjs/sheets-thread-comment": "0.2.0",
-    "@univerjs/sheets-ui": "0.2.0",
-    "@univerjs/sheets-zen-editor": "0.2.0",
-    "@univerjs/slides": "0.2.0",
-    "@univerjs/slides-ui": "0.2.0",
-    "@univerjs/thread-comment": "0.2.0",
-    "@univerjs/thread-comment-ui": "0.2.0",
-    "@univerjs/ui": "0.2.0",
-    "@univerjs/uniscript": "0.2.0",
+    "@univerjs/rpc": "0.2.2",
+    "@univerjs/sheets": "0.2.2",
+    "@univerjs/sheets-conditional-formatting": "0.2.2",
+    "@univerjs/sheets-conditional-formatting-ui": "0.2.2",
+    "@univerjs/sheets-data-validation": "0.2.2",
+    "@univerjs/sheets-drawing": "0.2.2",
+    "@univerjs/sheets-drawing-ui": "0.2.2",
+    "@univerjs/sheets-filter": "0.2.2",
+    "@univerjs/sheets-filter-ui": "0.2.2",
+    "@univerjs/sheets-find-replace": "0.2.2",
+    "@univerjs/sheets-formula": "0.2.2",
+    "@univerjs/sheets-hyper-link": "0.2.2",
+    "@univerjs/sheets-hyper-link-ui": "0.2.2",
+    "@univerjs/sheets-numfmt": "0.2.2",
+    "@univerjs/sheets-thread-comment": "0.2.2",
+    "@univerjs/sheets-ui": "0.2.2",
+    "@univerjs/sheets-zen-editor": "0.2.2",
+    "@univerjs/slides": "0.2.2",
+    "@univerjs/slides-ui": "0.2.2",
+    "@univerjs/thread-comment": "0.2.2",
+    "@univerjs/thread-comment-ui": "0.2.2",
+    "@univerjs/ui": "0.2.2",
+    "@univerjs/uniscript": "0.2.2",
     "@visactor/univer-vchart-plugin": "^1.0.4",
-    "@wendellhu/redi": "^0.15.5",
+    "@wendellhu/redi": "0.15.5",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "monaco-editor": "^0.50.0",
@@ -90,11 +90,11 @@
     "react-live": "^4.1.7",
     "react-mosaic-component": "^6.1.0",
     "rxjs": "^7.8.1",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.21.3",
-    "@eslint-react/eslint-plugin": "^1.5.22",
+    "@eslint-react/eslint-plugin": "^1.5.23",
     "@types/node": "^20.14.10",
     "@types/pako": "^2.0.3",
     "@types/react": "^18.3.3",
