--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -13,7 +13,7 @@ permissions:
 jobs:
   validate:
     name: Validate PR title
-    runs-on: silicon-valley
+    runs-on: ubuntu-latest
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         env:
