--- a/.github/workflows/feature-branch-push.yml
+++ b/.github/workflows/feature-branch-push.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Build and Push Docker Image
         run: |
           IMAGE_TAG=$(echo "${{ github.sha }}" | cut -c 1-7)
-          make push_image PUSH_TAG=$IMAGE_TAG BUILDER=${{ steps.buildx.outputs.name }}
+          make push_image PUSH_TAG=$IMAGE_TAG BUILDER=${{ steps.buildx.outputs.name }} CR=${{ secrets.REGISTRY_CR }}
         continue-on-error: true
 
   deploy:
