--- a/.github/workflows/feature-branch-push.yml
+++ b/.github/workflows/feature-branch-push.yml
@@ -39,6 +39,10 @@ jobs:
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
+      - name: set algolia env
+        run: |
+          echo "CR=${{ vars.NEXT_PUBLIC_ALGOLIA_APP_ID }}" >> $GITHUB_ENV
+          echo "CR=${{ vars.NEXT_PUBLIC_ALGOLIA_SEARCH_API_KEY }}" >> $GITHUB_ENV
 
       - name: Build
         run: |
