--- a/.github/workflows/feature-branch-push.yml
+++ b/.github/workflows/feature-branch-push.yml
@@ -41,8 +41,8 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
       - name: set algolia env
         run: |
-          echo "CR=${{ vars.NEXT_PUBLIC_ALGOLIA_APP_ID }}" >> $GITHUB_ENV
-          echo "CR=${{ vars.NEXT_PUBLIC_ALGOLIA_SEARCH_API_KEY }}" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_ALGOLIA_APP_ID=${{ vars.NEXT_PUBLIC_ALGOLIA_APP_ID }}" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_ALGOLIA_SEARCH_API_KEY=${{ vars.NEXT_PUBLIC_ALGOLIA_SEARCH_API_KEY }}" >> $GITHUB_ENV
 
       - name: Build
         run: |
