chore(release): release v0.2.8

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "univer.ai",
   "type": "module",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "private": false,
-  "packageManager": "pnpm@9.7.0",
+  "packageManager": "pnpm@9.7.1",
   "scripts": {
     "prepare": "simple-git-hooks",
     "dev": "next dev",
@@ -30,54 +30,54 @@
     "@react-spring/web": "^9.7.4",
     "@stackblitz/sdk": "^1.11.0",
     "@types/youtube-player": "^5.5.11",
-    "@univerjs-pro/collaboration": "0.2.7",
-    "@univerjs-pro/collaboration-client": "0.2.7",
-    "@univerjs-pro/live-share": "0.2.7",
-    "@univerjs-pro/print": "0.2.7",
-    "@univerjs-pro/sheets-exchange-client": "0.2.7",
-    "@univerjs-pro/sheets-print": "0.2.7",
-    "@univerjs/core": "0.2.7",
-    "@univerjs/data-validation": "0.2.7",
-    "@univerjs/design": "0.2.7",
-    "@univerjs/docs": "0.2.7",
-    "@univerjs/docs-drawing": "0.2.7",
-    "@univerjs/docs-drawing-ui": "0.2.7",
-    "@univerjs/docs-hyper-link-ui": "0.2.7",
-    "@univerjs/docs-thread-comment-ui": "0.2.7",
-    "@univerjs/docs-ui": "0.2.7",
-    "@univerjs/drawing": "0.2.7",
-    "@univerjs/drawing-ui": "0.2.7",
-    "@univerjs/engine-formula": "0.2.7",
-    "@univerjs/engine-numfmt": "0.2.7",
-    "@univerjs/engine-render": "0.2.7",
-    "@univerjs/facade": "0.2.7",
-    "@univerjs/find-replace": "0.2.7",
-    "@univerjs/icons": "^0.1.74",
-    "@univerjs/network": "0.2.7",
-    "@univerjs/protocol": "0.1.38",
-    "@univerjs/rpc": "0.2.7",
-    "@univerjs/sheets": "0.2.7",
-    "@univerjs/sheets-conditional-formatting": "0.2.7",
-    "@univerjs/sheets-conditional-formatting-ui": "0.2.7",
-    "@univerjs/sheets-data-validation": "0.2.7",
-    "@univerjs/sheets-drawing": "0.2.7",
-    "@univerjs/sheets-drawing-ui": "0.2.7",
-    "@univerjs/sheets-filter": "0.2.7",
-    "@univerjs/sheets-filter-ui": "0.2.7",
-    "@univerjs/sheets-find-replace": "0.2.7",
-    "@univerjs/sheets-formula": "0.2.7",
-    "@univerjs/sheets-hyper-link": "0.2.7",
-    "@univerjs/sheets-hyper-link-ui": "0.2.7",
-    "@univerjs/sheets-numfmt": "0.2.7",
-    "@univerjs/sheets-thread-comment": "0.2.7",
-    "@univerjs/sheets-ui": "0.2.7",
-    "@univerjs/sheets-zen-editor": "0.2.7",
-    "@univerjs/slides": "0.2.7",
-    "@univerjs/slides-ui": "0.2.7",
-    "@univerjs/thread-comment": "0.2.7",
-    "@univerjs/thread-comment-ui": "0.2.7",
-    "@univerjs/ui": "0.2.7",
-    "@univerjs/uniscript": "0.2.7",
+    "@univerjs-pro/collaboration": "0.2.8",
+    "@univerjs-pro/collaboration-client": "0.2.8",
+    "@univerjs-pro/live-share": "0.2.8",
+    "@univerjs-pro/print": "0.2.8",
+    "@univerjs-pro/sheets-exchange-client": "0.2.8",
+    "@univerjs-pro/sheets-print": "0.2.8",
+    "@univerjs/core": "0.2.8",
+    "@univerjs/data-validation": "0.2.8",
+    "@univerjs/design": "0.2.8",
+    "@univerjs/docs": "0.2.8",
+    "@univerjs/docs-drawing": "0.2.8",
+    "@univerjs/docs-drawing-ui": "0.2.8",
+    "@univerjs/docs-hyper-link-ui": "0.2.8",
+    "@univerjs/docs-thread-comment-ui": "0.2.8",
+    "@univerjs/docs-ui": "0.2.8",
+    "@univerjs/drawing": "0.2.8",
+    "@univerjs/drawing-ui": "0.2.8",
+    "@univerjs/engine-formula": "0.2.8",
+    "@univerjs/engine-numfmt": "0.2.8",
+    "@univerjs/engine-render": "0.2.8",
+    "@univerjs/facade": "0.2.8",
+    "@univerjs/find-replace": "0.2.8",
+    "@univerjs/icons": "^0.1.75",
+    "@univerjs/network": "0.2.8",
+    "@univerjs/protocol": "0.1.39-alpha.4",
+    "@univerjs/rpc": "0.2.8",
+    "@univerjs/sheets": "0.2.8",
+    "@univerjs/sheets-conditional-formatting": "0.2.8",
+    "@univerjs/sheets-conditional-formatting-ui": "0.2.8",
+    "@univerjs/sheets-data-validation": "0.2.8",
+    "@univerjs/sheets-drawing": "0.2.8",
+    "@univerjs/sheets-drawing-ui": "0.2.8",
+    "@univerjs/sheets-filter": "0.2.8",
+    "@univerjs/sheets-filter-ui": "0.2.8",
+    "@univerjs/sheets-find-replace": "0.2.8",
+    "@univerjs/sheets-formula": "0.2.8",
+    "@univerjs/sheets-hyper-link": "0.2.8",
+    "@univerjs/sheets-hyper-link-ui": "0.2.8",
+    "@univerjs/sheets-numfmt": "0.2.8",
+    "@univerjs/sheets-thread-comment": "0.2.8",
+    "@univerjs/sheets-ui": "0.2.8",
+    "@univerjs/sheets-zen-editor": "0.2.8",
+    "@univerjs/slides": "0.2.8",
+    "@univerjs/slides-ui": "0.2.8",
+    "@univerjs/thread-comment": "0.2.8",
+    "@univerjs/thread-comment-ui": "0.2.8",
+    "@univerjs/ui": "0.2.8",
+    "@univerjs/uniscript": "0.2.8",
     "@visactor/univer-vchart-plugin": "^2.0.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.12",
